Calculate cluster-level summaries of census tract statistics

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -52,7 +52,8 @@
     "from shapely.validation import make_valid\n",
     "from matplotlib.colors  import hsv_to_rgb, to_hex\n",
     "from cartopy.crs        import LambertConformal, PlateCarree\n",
-    "from cartopy            import feature"
+    "from cartopy            import feature\n",
+    "from sklearn.neighbors  import KNeighborsRegressor"
    ]
   },
   {
@@ -182,16 +183,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d373c0c5-10b3-4028-95c4-ed57b16fdff3",
-   "metadata": {},
-   "source": [
-    "Primary data source:\n",
-    "+ 2020 TIGER shapefiles from the US Census (the .dbf files)\n",
-    "+ 2020 DP series population summary tables from US Census (as needed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3b2efc95-73d7-4ea5-a4bf-4c531d8dc57b",
    "metadata": {},
    "source": [
@@ -276,7 +267,8 @@
     "        dtype = census, usecols = census.keys()).set_index('GEO_ID')\n",
     "\n",
     "## execute code\n",
-    "read_secondary_data()"
+    "read_secondary_data()\n",
+    "log_time('GD2')"
    ]
   },
   {
@@ -389,7 +381,8 @@
     "\n",
     "## execute data\n",
     "census_data = refine_census_data()\n",
-    "del census, income"
+    "del census, income\n",
+    "log_time('RD2')"
    ]
   },
   {
@@ -405,50 +398,8 @@
    "execution_count": 10,
    "id": "a70b3a0f-3b80-4a2f-bbb1-90a86a21df67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TODO: switch this to non-Euclidean distance\n",
-      "TODO: switch this to non-Euclidean distance\n",
-      "TODO: switch this to non-Euclidean distance\n",
-      "TODO: switch this to non-Euclidean distance\n",
-      "TODO: switch this to non-Euclidean distance\n",
-      "\n",
-      "            GEOID  total_population  65_years_and_over  white_alone  \\\n",
-      "0     04001942600              1711                229            0   \n",
-      "1     04001942700              5469                759           49   \n",
-      "2     04001944000              6577               1033          147   \n",
-      "3     04001944100              6183                637          202   \n",
-      "4     04001944201              4540                523          163   \n",
-      "...           ...               ...                ...          ...   \n",
-      "4535  49057210900              7153               1028         5482   \n",
-      "4536  49057211000              3184                461         2451   \n",
-      "4537  49057211100              5622               1088         4839   \n",
-      "4538  49057211201              4209                726         3555   \n",
-      "4539  49057211202              7154               1466         6319   \n",
-      "\n",
-      "      $200,000_or_more  total_votes  rep_votes  \n",
-      "0                   11          896        488  \n",
-      "1                   37         2914       1631  \n",
-      "2                  115         3002       1259  \n",
-      "3                   22         2859       1315  \n",
-      "4                    0         2029        871  \n",
-      "...                ...          ...        ...  \n",
-      "4535               398         3323       2059  \n",
-      "4536                 0         1465        902  \n",
-      "4537               113         2614       1618  \n",
-      "4538               306         2010       1271  \n",
-      "4539               313         3371       2103  \n",
-      "\n",
-      "[4540 rows x 7 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "\n",
     "def merge_potus_data(d = dbf_data, p = potus, c = census_data):\n",
     "    \n",
     "    ## calculate population centroid for each county\n",
@@ -493,8 +444,6 @@
     "    d = d.set_index('GEOID')\n",
     "    c = c.join(d[['INTPTLON', 'INTPTLAT']])\n",
     "    \n",
-    "    print('TODO: switch this to non-Euclidean distance\\n' * 5)\n",
-    "    \n",
     "    ## -- train knn model on p\n",
     "\n",
     "    ## interpolate total potus votes\n",
@@ -520,7 +469,8 @@
     "    \n",
     "## execute code\n",
     "census_data = merge_potus_data()\n",
-    "del potus"
+    "del potus\n",
+    "log_time('RD3')"
    ]
   },
   {
@@ -699,7 +649,8 @@
     "agglom_elbow = elbow_finder(agglom_score[['clusters', 'score']])\n",
     "dbscan_elbow = elbow_finder(dbscan_score[['clusters', 'score']])\n",
     "agglom_clusters = retrieve_clusters(agglom_elbow, 'Agglom')\n",
-    "dbscan_clusters = retrieve_clusters(dbscan_elbow, 'DBSCAN')"
+    "dbscan_clusters = retrieve_clusters(dbscan_elbow, 'DBSCAN')\n",
+    "log_time('MD3')"
    ]
   },
   {
@@ -712,35 +663,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4e0976d-dd00-411a-9c77-e23dd233f27a",
+   "id": "4a0c9e8a-978b-45d6-baf4-fd86f9d76470",
    "metadata": {},
    "source": [
-    "#### EMR1"
+    "#### EMR1 - compile tract-level and cluster-level data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79f445de-fefb-4f4b-ac9a-560c2ea12125",
+   "execution_count": 14,
+   "id": "5475b33d-76b7-49a2-b194-533f01c33fbd",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ac38a6b2-bd67-4cfd-b3ef-45d87ec20fc0",
-   "metadata": {},
    "source": [
-    "#### EMR2"
+    "## consolidate tract-level data\n",
+    "dbf_data['agglom'] = agglom_clusters\n",
+    "dbf_data['dbscan'] = dbscan_clusters\n",
+    "census_data = census_data.set_index('GEOID')\n",
+    "dbf_data = dbf_data.set_index('GEOID')\n",
+    "dbf_data = dbf_data.join(census_data)\n",
+    "del dbscan_clusters, agglom_clusters, census_data\n",
+    "\n",
+    "## sum statistics to the cluster level\n",
+    "def average_xy(x):\n",
+    "    x['INTPTLAT'] = np.round(x['INTPTLAT'] / x['count'], 6)\n",
+    "    x['INTPTLON'] = np.round(x['INTPTLON'] / x['count'], 6)\n",
+    "    return x\n",
+    "cluster_sums = dict()\n",
+    "cluster_sums['agglom'] = average_xy(dbf_data.groupby('agglom').sum())\n",
+    "cluster_sums['dbscan'] = average_xy(dbf_data.groupby('dbscan').sum())\n",
+    "log_time('EMR1')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13daaba1-484d-449b-ba13-532d98ad4c64",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -760,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "67e4066a-99d3-4c41-92e7-6e80adeadae0",
    "metadata": {},
    "outputs": [],
@@ -785,11 +738,13 @@
     "        cluster_polys[i] = unary_union(cluster_polys[i])\n",
     "    return cluster_polys\n",
     "\n",
-    "agglom_region_polygons = make_voronoi_polygons(\n",
-    "    dbf_data[['INTPTLON', 'INTPTLAT']], agglom_clusters)\n",
-    "\n",
-    "dbscan_region_polygons = make_voronoi_polygons(\n",
-    "    dbf_data[['INTPTLON', 'INTPTLAT']], dbscan_clusters)"
+    "## execute data\n",
+    "region_polygons = dict()\n",
+    "region_polygons['agglom'] = make_voronoi_polygons(\n",
+    "    dbf_data[['INTPTLON', 'INTPTLAT']], dbf_data['agglom'])\n",
+    "region_polygons['dbscan']  = make_voronoi_polygons(\n",
+    "    dbf_data[['INTPTLON', 'INTPTLAT']], dbf_data['dbscan'])\n",
+    "log_time('PVD1')"
    ]
   },
   {
@@ -826,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "eae507fa-f5f7-4a9a-8a7b-7fd0bb40bbef",
    "metadata": {},
    "outputs": [
@@ -877,7 +832,8 @@
     "        all_axes[i].set_facecolor(set_color['empty'])\n",
     "    \n",
     "## execute code\n",
-    "render_plot_understructure()"
+    "render_plot_understructure()\n",
+    "log_time('RV1')"
    ]
   },
   {
@@ -922,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "85d88ccf-66d9-4aff-b06b-9693ea210435",
    "metadata": {},
    "outputs": [],
@@ -958,8 +914,9 @@
     "        color = set_color['tract'], transform = PlateCarree())\n",
     "\n",
     "## execute code\n",
-    "render_region('dbscan', dbscan_region_polygons)\n",
-    "render_region('agglom', agglom_region_polygons)"
+    "render_region('dbscan', region_polygons['dbscan'])\n",
+    "render_region('agglom', region_polygons['agglom'] )\n",
+    "log_time('RV4')"
    ]
   },
   {
@@ -988,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
    "metadata": {},
    "outputs": [],
@@ -1001,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -1010,12 +967,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 18:30:43\n",
-      "  GD1: 18:30:46\n",
-      "  RD1: 18:30:53\n",
-      "  MD1: 18:30:53\n",
-      "  MD2: 18:30:53\n",
-      "  End: 18:30:59\n"
+      "   H2: 09:38:57\n",
+      "  GD1: 09:39:00\n",
+      "  GD2: 09:39:03\n",
+      "  RD1: 09:39:06\n",
+      "  RD2: 09:39:06\n",
+      "  RD3: 09:39:06\n",
+      "  MD1: 09:39:06\n",
+      "  MD2: 09:39:06\n",
+      "  MD3: 09:39:06\n",
+      " EMR1: 09:39:06\n",
+      " PVD1: 09:39:07\n",
+      "  RV1: 09:39:07\n",
+      "  RV4: 09:39:07\n",
+      "  End: 09:39:12\n"
      ]
     }
    ],
@@ -1025,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "9b249d53-d193-4008-9975-a451284ee066",
    "metadata": {},
    "outputs": [],
