Test modeling code with larger subset of the data

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -224,8 +224,12 @@
     "    \n",
     "## execute code\n",
     "dbf_data = read_tract_dbf('A_Input/tracts_dbf')\n",
-    "if not server_mode: # 04 = AZ, 08 = CO, NM = 35, UT = 49\n",
-    "    dbf_data = dbf_data.loc[dbf_data.STATEFP.isin(['49', '08', '04', '35'])]\n",
+    "test_states = {'AZ':'04', 'AR':'05', 'CO':'08', 'ID':'16', 'IA':'19',\n",
+    "               'KS':'20', 'MN':'27', 'MO':'29', 'MT':'30', 'NE':'31',\n",
+    "               'NV':'32', 'NM':'35', 'ND':'38', 'OK':'40', 'SD':'46',\n",
+    "               'UT':'49', 'WY':'56'}\n",
+    "if not server_mode:\n",
+    "    dbf_data = dbf_data.loc[dbf_data.STATEFP.isin(test_states.values())]\n",
     "log_time('GD1')"
    ]
   },
@@ -444,6 +448,15 @@
     "    d = d.set_index('GEOID')\n",
     "    c = c.join(d[['INTPTLON', 'INTPTLAT']])\n",
     "    \n",
+    "    ## drop invalid cases\n",
+    "    before_drop = p.shape\n",
+    "    p = p.dropna()\n",
+    "    after_drop = p.shape\n",
+    "    if after_drop[0] > after_drop[0]:\n",
+    "        i = 'Warning: Dropped {0} cases due to missing values'\n",
+    "        i = i.format(after_drop[0] - after_drop[0])\n",
+    "        print(i)\n",
+    "    \n",
     "    ## -- train knn model on p\n",
     "\n",
     "    ## interpolate total potus votes\n",
@@ -563,7 +576,7 @@
     "\n",
     "## assemble models\n",
     "model_agglom = dict()\n",
-    "for i in range(250 - 150, 250 + 150, 10):\n",
+    "for i in range(200, 200 + 25 * 20, 25):\n",
     "    model_iter = AgglomerativeClustering(\n",
     "        n_clusters = None, compute_full_tree = True,\n",
     "        affinity = 'precomputed', linkage = 'average',\n",
@@ -585,7 +598,7 @@
     "\n",
     "## assemble models\n",
     "model_dbscan = dict()\n",
-    "for i in range(10, 150, 10):\n",
+    "for i in range(10, 10 + 10 * 20, 10):\n",
     "    model_iter = DBSCAN(eps = i, metric = 'precomputed', n_jobs = 8, min_samples = set_md['db_min_size'])\n",
     "    model_dbscan[str(int(i))] = model_iter\n",
     "    \n",
@@ -929,11 +942,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8291e682-93f1-46a9-8712-597f5faccaae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 60 \n",
+      "\n",
+      "     name  score  clusters  outliers\n",
+      "10     10  0.001        53      5402\n",
+      "20     20  0.002        51      3305\n",
+      "30     30  0.043        31      1365\n",
+      "40     40  0.150        24       722\n",
+      "50     50  0.202        10       419\n",
+      "60     60  0.222         7       150\n",
+      "70     70  0.949         3        48\n",
+      "80     80  0.951         3        29\n",
+      "90     90  0.952         3        17\n",
+      "100   100  0.956         3         1\n",
+      "110   110  0.956         2         0\n",
+      "120   120  1.000         1         0\n",
+      "130   130  1.000         1         0\n",
+      "140   140  1.000         1         0\n",
+      "150   150  1.000         1         0\n",
+      "160   160  1.000         1         0\n",
+      "170   170  1.000         1         0\n",
+      "180   180  1.000         1         0\n",
+      "190   190  1.000         1         0\n",
+      "200   200  1.000         1         0\n",
+      "\n",
+      " 475 \n",
+      "\n",
+      "     name  score  clusters  outliers\n",
+      "200   200  0.009        26         0\n",
+      "225   225  0.011        20         0\n",
+      "250   250  0.017        18         0\n",
+      "275   275  0.034        13         0\n",
+      "300   300  0.046        11         0\n",
+      "325   325  0.060        10         0\n",
+      "350   350  0.060         9         0\n",
+      "375   375  0.066         8         0\n",
+      "400   400  0.068         7         0\n",
+      "425   425  0.068         7         0\n",
+      "450   450  0.070         6         0\n",
+      "475   475  0.070         6         0\n",
+      "500   500  0.173         5         0\n",
+      "525   525  0.173         5         0\n",
+      "550   550  0.214         4         0\n",
+      "575   575  0.214         4         0\n",
+      "600   600  0.220         3         0\n",
+      "625   625  0.220         3         0\n",
+      "650   650  0.305         2         0\n",
+      "675   675  0.305         2         0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n', dbscan_elbow, '\\n')\n",
+    "print(dbscan_score)\n",
+    "\n",
+    "print('\\n', agglom_elbow, '\\n')\n",
+    "print(agglom_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -945,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "20191b03-9043-4e5b-85d2-f97aa357a597",
    "metadata": {},
    "outputs": [],
@@ -958,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "db352693-855a-402d-af68-6a1d8639a427",
    "metadata": {},
    "outputs": [
@@ -967,20 +1041,20 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 09:38:57\n",
-      "  GD1: 09:39:00\n",
-      "  GD2: 09:39:03\n",
-      "  RD1: 09:39:06\n",
-      "  RD2: 09:39:06\n",
-      "  RD3: 09:39:06\n",
-      "  MD1: 09:39:06\n",
-      "  MD2: 09:39:06\n",
-      "  MD3: 09:39:06\n",
-      " EMR1: 09:39:06\n",
-      " PVD1: 09:39:07\n",
-      "  RV1: 09:39:07\n",
-      "  RV4: 09:39:07\n",
-      "  End: 09:39:12\n"
+      "   H2: 13:09:51\n",
+      "  GD1: 13:09:54\n",
+      "  GD2: 13:09:57\n",
+      "  RD1: 13:10:34\n",
+      "  RD2: 13:10:34\n",
+      "  RD3: 13:10:34\n",
+      "  MD1: 13:10:34\n",
+      "  MD2: 13:10:34\n",
+      "  MD3: 13:10:34\n",
+      " EMR1: 13:10:34\n",
+      " PVD1: 13:10:37\n",
+      "  RV1: 13:10:37\n",
+      "  RV4: 13:10:37\n",
+      "  End: 13:10:42\n"
      ]
     }
    ],
@@ -990,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9b249d53-d193-4008-9975-a451284ee066",
    "metadata": {},
    "outputs": [],
