Run model on a 1/8th sample

--- a/1_cluster_us_population.ipynb
+++ b/1_cluster_us_population.ipynb
@@ -215,7 +215,7 @@
     "        i_dbf = i_dbf[desired_columns.keys()].astype(desired_columns)\n",
     "        dbf_data.append(i_dbf)\n",
     "        \n",
-    "    ## compile data into a single file and export\n",
+    "    ## compile data into a single file\n",
     "    dbf_data = pd.concat(dbf_data, axis = 0).sort_values('GEOID')\n",
     "    dbf_data['count'] = 1\n",
     "    dbf_data = dbf_data.reset_index(drop = True)\n",
@@ -224,12 +224,10 @@
     "    \n",
     "## execute code\n",
     "dbf_data = read_tract_dbf('A_Input/tracts_dbf')\n",
-    "test_states = {'AZ':'04', 'AR':'05', 'CO':'08', 'ID':'16', 'IA':'19',\n",
-    "               'KS':'20', 'MN':'27', 'MO':'29', 'MT':'30', 'NE':'31',\n",
-    "               'NV':'32', 'NM':'35', 'ND':'38', 'OK':'40', 'SD':'46',\n",
-    "               'UT':'49', 'WY':'56'}\n",
     "if not server_mode:\n",
-    "    dbf_data = dbf_data.loc[dbf_data.STATEFP.isin(test_states.values())]\n",
+    "    i = np.arange(0, dbf_data.shape[0])\n",
+    "    i = ((i % 8) == 1).astype(bool)\n",
+    "    dbf_data = dbf_data.loc[i, ]\n",
     "log_time('GD1')"
    ]
   },
@@ -325,7 +323,7 @@
     "        return xy_dist\n",
     "\n",
     "    ## run engine in parallel for each slice of the data\n",
-    "    with Cluster(n = 4) as clust:\n",
+    "    with Cluster(n = 6) as clust:\n",
     "        view = clust.load_balanced_view()\n",
     "        asyncresult = view.map_async(measure_distance_parallel_slice, the_iter)\n",
     "        asyncresult.wait_interactive()\n",
@@ -440,22 +438,17 @@
     "    p = p.join(pop_total.set_index('county_fips'))\n",
     "    \n",
     "    ## convert figures to percentages\n",
-    "    p['repvotes']  = (p['repvotes'] / p['totalvotes']).round(6)\n",
-    "    p['totalvotes'] = (p['totalvotes'] / p['totalpop']).round(6)\n",
+    "    safe_divisor = lambda x: x + (x == 0).astype(int)\n",
+    "    p['repvotes']   = (p['repvotes'] / safe_divisor(p['totalvotes'])).round(6)\n",
+    "    p['totalvotes'] = (p['totalvotes'] / safe_divisor(p['totalpop'])).round(6)\n",
+    "    \n",
+    "    ## drop invalid values\n",
+    "    p = p.dropna()\n",
     "    \n",
     "    ## retrieve coordinates from dbf_data to census_data\n",
     "    c = c.set_index('GEOID')\n",
     "    d = d.set_index('GEOID')\n",
     "    c = c.join(d[['INTPTLON', 'INTPTLAT']])\n",
-    "    \n",
-    "    ## drop invalid cases\n",
-    "    before_drop = p.shape\n",
-    "    p = p.dropna()\n",
-    "    after_drop = p.shape\n",
-    "    if after_drop[0] > after_drop[0]:\n",
-    "        i = 'Warning: Dropped {0} cases due to missing values'\n",
-    "        i = i.format(after_drop[0] - after_drop[0])\n",
-    "        print(i)\n",
     "    \n",
     "    ## -- train knn model on p\n",
     "\n",
@@ -576,7 +569,7 @@
     "\n",
     "## assemble models\n",
     "model_agglom = dict()\n",
-    "for i in range(200, 200 + 25 * 20, 25):\n",
+    "for i in range(400, 200 + 25 * 20, 25):\n",
     "    model_iter = AgglomerativeClustering(\n",
     "        n_clusters = None, compute_full_tree = True,\n",
     "        affinity = 'precomputed', linkage = 'average',\n",
@@ -598,8 +591,9 @@
     "\n",
     "## assemble models\n",
     "model_dbscan = dict()\n",
-    "for i in range(10, 10 + 10 * 20, 10):\n",
-    "    model_iter = DBSCAN(eps = i, metric = 'precomputed', n_jobs = 8, min_samples = set_md['db_min_size'])\n",
+    "for i in range(30, 30 + 10 * 20, 10):\n",
+    "    model_iter = DBSCAN(eps = i, metric = 'precomputed', n_jobs = 8,\n",
+    "                        min_samples = set_md['db_min_size'])\n",
     "    model_dbscan[str(int(i))] = model_iter\n",
     "    \n",
     "## execute models\n",
@@ -627,7 +621,15 @@
    "execution_count": 13,
    "id": "be383a79-a7fd-432b-90f3-bf6b81c166f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: DBSCAN elbow is hard coded for temporary dev purposes\n"
+     ]
+    }
+   ],
    "source": [
     "max_min_norm = lambda x: (x - min(x)) / (max(x) - min(x)) \n",
     "\n",
@@ -661,8 +663,10 @@
     "## execute code\n",
     "agglom_elbow = elbow_finder(agglom_score[['clusters', 'score']])\n",
     "dbscan_elbow = elbow_finder(dbscan_score[['clusters', 'score']])\n",
+    "dbscan_elbow = '90'\n",
     "agglom_clusters = retrieve_clusters(agglom_elbow, 'Agglom')\n",
     "dbscan_clusters = retrieve_clusters(dbscan_elbow, 'DBSCAN')\n",
+    "print('WARNING: DBSCAN elbow is hard coded for temporary dev purposes')\n",
     "log_time('MD3')"
    ]
   },
@@ -740,7 +744,8 @@
     "    for i in vor.point_region:\n",
     "        vr = [j for j in vor.regions[i] if j >= 0]\n",
     "        vv = vor.vertices[vr, :]\n",
-    "        vv= Polygon(vv)\n",
+    "        try: vv= Polygon(vv)\n",
+    "        except: vv = Polygon([(0,0),(0,0),(0,0)])\n",
     "        vv = make_valid(vv)\n",
     "        vor_polys.append(vv)\n",
     "        \n",
@@ -904,8 +909,10 @@
     "    ## render map layers\n",
     "    for i in poly.keys():\n",
     "        if i != -1:\n",
-    "            all_axes[ax].fill(*poly[i].exterior.xy, zorder = 0,\n",
-    "                color = set_color['reg_area'], transform = PlateCarree())\n",
+    "            try:\n",
+    "                all_axes[ax].fill(*poly[i].exterior.xy, zorder = 0,\n",
+    "                    color = set_color['reg_area'], transform = PlateCarree())\n",
+    "            except: print('group ', i, ' failed')\n",
     "            \n",
     "    all_axes[ax].add_geometries(list(feature.STATES.geometries()),\n",
     "        facecolor = '#33221100', lw = 1, edgecolor = set_color['border'],\n",
@@ -916,8 +923,10 @@
     "    \n",
     "    for i in poly.keys():\n",
     "        if i != -1:\n",
-    "            all_axes[ax].plot(*poly[i].exterior.xy, zorder = 3,\n",
-    "                color = set_color['reg_line'], transform = PlateCarree())\n",
+    "            try:\n",
+    "                all_axes[ax].plot(*poly[i].exterior.xy, zorder = 3,\n",
+    "                    color = set_color['reg_line'], transform = PlateCarree())\n",
+    "            except: print('group ', i, ' failed')\n",
     "\n",
     "    all_axes[ax].add_feature(feature.OCEAN, facecolor = set_color['empty'],\n",
     "        lw = 1, edgecolor = set_color['border'], zorder = 4)\n",
@@ -951,53 +960,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " 60 \n",
+      " 90 \n",
       "\n",
       "     name  score  clusters  outliers\n",
-      "10     10  0.001        53      5402\n",
-      "20     20  0.002        51      3305\n",
-      "30     30  0.043        31      1365\n",
-      "40     40  0.150        24       722\n",
-      "50     50  0.202        10       419\n",
-      "60     60  0.222         7       150\n",
-      "70     70  0.949         3        48\n",
-      "80     80  0.951         3        29\n",
-      "90     90  0.952         3        17\n",
-      "100   100  0.956         3         1\n",
-      "110   110  0.956         2         0\n",
-      "120   120  1.000         1         0\n",
-      "130   130  1.000         1         0\n",
-      "140   140  1.000         1         0\n",
-      "150   150  1.000         1         0\n",
-      "160   160  1.000         1         0\n",
-      "170   170  1.000         1         0\n",
-      "180   180  1.000         1         0\n",
-      "190   190  1.000         1         0\n",
-      "200   200  1.000         1         0\n",
+      "30     30  0.004        48      2720\n",
+      "40     40  0.014        39      1586\n",
+      "50     50  0.112        26       821\n",
+      "60     60  0.327        15       547\n",
+      "70     70  0.360        16       330\n",
+      "80     80  0.367        13       224\n",
+      "90     90  0.380        11       160\n",
+      "100   100  0.402         7       117\n",
+      "110   110  0.407         6        82\n",
+      "120   120  0.417         3        52\n",
+      "130   130  0.990         2        44\n",
+      "140   140  0.993         2        31\n",
+      "150   150  0.997         2        15\n",
+      "160   160  0.997         2        13\n",
+      "170   170  1.000         2         1\n",
+      "180   180  1.000         2         1\n",
+      "190   190  1.000         2         1\n",
+      "200   200  1.000         2         1\n",
+      "210   210  1.000         1         0\n",
+      "220   220  1.000         1         0\n",
       "\n",
-      " 475 \n",
+      " 500 \n",
       "\n",
       "     name  score  clusters  outliers\n",
-      "200   200  0.009        26         0\n",
-      "225   225  0.011        20         0\n",
-      "250   250  0.017        18         0\n",
-      "275   275  0.034        13         0\n",
-      "300   300  0.046        11         0\n",
-      "325   325  0.060        10         0\n",
-      "350   350  0.060         9         0\n",
-      "375   375  0.066         8         0\n",
-      "400   400  0.068         7         0\n",
-      "425   425  0.068         7         0\n",
-      "450   450  0.070         6         0\n",
-      "475   475  0.070         6         0\n",
-      "500   500  0.173         5         0\n",
-      "525   525  0.173         5         0\n",
-      "550   550  0.214         4         0\n",
-      "575   575  0.214         4         0\n",
-      "600   600  0.220         3         0\n",
-      "625   625  0.220         3         0\n",
-      "650   650  0.305         2         0\n",
-      "675   675  0.305         2         0\n"
+      "400   400  0.025        16         0\n",
+      "425   425  0.025        15         0\n",
+      "450   450  0.026        14         0\n",
+      "475   475  0.031        13         0\n",
+      "500   500  0.033        11         0\n",
+      "525   525  0.045        10         0\n",
+      "550   550  0.049         9         0\n",
+      "575   575  0.059         7         0\n",
+      "600   600  0.059         7         0\n",
+      "625   625  0.059         7         0\n",
+      "650   650  0.059         7         0\n",
+      "675   675  0.059         7         0\n"
      ]
     }
    ],
@@ -1041,26 +1042,34 @@
      "output_type": "stream",
      "text": [
       "Time log:\n",
-      "   H2: 13:09:51\n",
-      "  GD1: 13:09:54\n",
-      "  GD2: 13:09:57\n",
-      "  RD1: 13:10:34\n",
-      "  RD2: 13:10:34\n",
-      "  RD3: 13:10:34\n",
-      "  MD1: 13:10:34\n",
-      "  MD2: 13:10:34\n",
-      "  MD3: 13:10:34\n",
-      " EMR1: 13:10:34\n",
-      " PVD1: 13:10:37\n",
-      "  RV1: 13:10:37\n",
-      "  RV4: 13:10:37\n",
-      "  End: 13:10:42\n"
+      "   H2: 14:20:01\n",
+      "  GD1: 14:20:04\n",
+      "  GD2: 14:20:07\n",
+      "  RD1: 14:20:27\n",
+      "  RD2: 14:20:27\n",
+      "  RD3: 14:20:27\n",
+      "  MD1: 14:20:27\n",
+      "  MD2: 14:20:27\n",
+      "  MD3: 14:20:27\n",
+      " EMR1: 14:20:27\n",
+      " PVD1: 14:20:29\n",
+      "  RV1: 14:20:29\n",
+      "  RV4: 14:20:30\n",
+      "  End: 14:20:34\n"
      ]
     }
    ],
    "source": [
     "log_time()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e86c6d-ea9d-4689-b1d1-e72f6b3a0724",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
